--- a/python/Makefile
+++ b/python/Makefile
@@ -153,6 +153,8 @@ port_src += $(addprefix python/port/,\
   mod/turtle/modturtle_table.c \
   mod/turtle/turtle.cpp \
   mphalport.c \
+  uart.c \
+  uart_impl.c \
 )
 
 # Workarounds
